New cache provider methods for Intermediary
Issue-ID: POLICY-5620
Change-Id: I064f6390500b0426c4d555da04324cc9b0fbcc3b
Signed-off-by: FrancescoFioraEst <francesco.fiora@est.tech>